# pipeguru-ssr-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_request.json  test_video_support.py
default_embeddings/: README.md  manifest.json
scripts/: __init__.py  calculate_accuracy_visual_ads.py  download_dataset.py  evaluate_visual_ads.py  generate_reference_embeddings.py  test_analyze_creative.py
src/: __init__.py  main.py
src/api/v1/: __init__.py  analyze.py  health.py  personas.py  predict.py  rate.py
src/core/: ad_predictor.py  auth.py  brand_familiarity.py  embeddings.py  llm_client.py  persona_generator.py  placement_context.py  reference_statements.py
src/models/: __init__.py  schemas.py
src/utils/: image_utils.py  mime_detector.py  validation_metrics.py
tests/: __init__.py  test_api.py  test_full_pipeline.py  test_integration_e2e.py  test_llm_client.py  test_llm_connection.py  test_persona_simple.py  test_phase1_enhancements.py  test_predict_endpoint.py
